--- a/src/Layout/style.css
+++ b/src/Layout/style.css
@@ -1,7 +1,24 @@
-[contenteditable="true"]:empty:before {
-  content: attr(placeholder);
-  display: block;
-  color: #aaa;
+/* style.css */
+:root {
+  /* Light theme colors */
+  --primary-bg-color: #ffffff;
+  --text-color: #333333;
+
+  /* Dark theme colors */
+  --primary-bg-color-dark: #1a1a1a;
+  --text-color-dark: #f0f0f0;
+}
+
+/* Set initial theme to light */
+body {
+  background-color: var(--primary-bg-color);
+  color: var(--text-color);
+}
+
+/* Add styles for dark mode */
+body.dark-mode {
+  background-color: var(--primary-bg-color-dark);
+  color: var(--text-color-dark);
 }
 .container {
   /* Set the desired height for the container */
